[Fix] fixed checkbox alignement

--- a/static/style.css
+++ b/static/style.css
@@ -82,3 +82,8 @@
   overflow-x: hidden;
   max-height: 70vh;
 }
+
+.item {
+  white-space: nowrap;
+  display:inline;
+}
